# python-benchmarking

./: .gitignore  .pdm-python  README.md  bench.sh  pyproject.toml
src/python_benchmarking/: cases.py  plot.py  pure_python.py  with_njit.py  with_numpy.py
