[project]
name = "python-benchmarking"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David James McCorrie", email = "djmccorrie@gmail.com"},
]
dependencies = [
    "numba>=0.59.1",
    "matplotlib>=3.8.4",
    "PyQt6>=6.7.0",
    "click>=8.1.7",
    "pandas>=2.2.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
